# AniLex

./: .gitignore  CMakeLists.txt  CREDITS.md  Doxyfile  README.md  SECTION_USAGE_EXAMPLE.md  graphql.config.yml  main.py  requirements.txt
.github/: copilot-instructions.md
GraphQL/mutations/: add_to_custom_list.graphql  add_to_list.graphql
GraphQL/queries/: get_auth_profile.graphql  get_followers.graphql  get_following.graphql  get_genres.graphql  get_media_characters.graphql  get_media_info.graphql  get_media_staff.graphql  get_media_stats.graphql  get_public_profile.graphql  get_tags.graphql  media_list_collection.graphql  search_user.graphql  trace_moe_title.graphql
assets/: CMakeLists.txt  designer_presets.json  designer_presets.jsonnet  index.html  script.js  styles.css
assets/styles/: main.qss
assets/translations/: anilex_de.ts  anilex_en.ts  anilex_en_US.ts
cache/: settings.json  settings.yaml  user_data.json
cache/api_data/: animechanapi.json  aniwatchapi.json  nekoimageapi.json
config/: settings.py
core/: api-getter.py  api-sender.py  auth.py  openai_integration.py
core/AniList/: api-getter.py  api-sender.py  api_getter.py  auth.py
core/mpv/: mpv_player.py
core/notifications/: notification_dialog.py  notification_handler.py
core/open_ai/: openai_integration.py
core/tool_apis/: animechan.py  aniworldapi.py  hianimez_setup.py  hianimezapi.py  neko_best.py  neko_image.py  sauceNAO.py  treace_moe.py  waifu_im.py
docs/: designer_propertey_signals.mmd
include/: version.h  version.h.in
include/anilex/core/: AniListEnums.h  AuthErrors.h  AuthServer.h  Authenticator.h  AuthenticatorPinFallback.h  Collapsable.h  EnumConverter.h  GlobalSettings.h  MenuRClickFilter.h  SecretStorage.h  TabMeta.h  Tabs.h
include/anilex/ui/: Collapsable.h  CustomPixmap.h  MainWindow.h  SectionUsageExample.h  TabBar.h  TabBarSimple.h  TabButton.h  TabButtonSimple.h  VerticalTabBar.h
models/: AniListAPI.py  Hianimez.py  NotificationDB.py  TraceMoe.py  anime.py  manga.py  novel.py  sorting.py  status.py  type.py
src/: CMakeLists.txt  main.cpp
src/api/: FuzzyDate.graphql  GenreTagCollectionQuery.graphql  MediaTagCollectionQuery.graphql  PageInfo.graphql  ToggleLikeMutation.graphql  ToggleLikeQuery.graphql  graphql.config.yml  schema.graphqls.graphql
src/api/activity/: ActivityDetailsQuery.graphql  ActivityFeedQuery.graphql  ActivityUpdateQuery.graphql  DeleteActivityMutation.graphql  DeleteActivityReplyMutation.graphql  SaveActivityReplyMutation.graphql  SaveMessageActivityMutation.graphql  SaveTextActivityMutation.graphql  ToggleActivityPinMutation.graphql  ToggleActivitySubscriptionMutation.graphql
src/api/character/: GetCharacterDetailsQuery.graphql  SearchCharacterQuery.graphql
src/api/favorite/: GetUserFavoriteAnimeQuery.graphql  GetUserFavoriteCharacterQuery.graphql  GetUserFavoriteMangaQuery.graphql  GetUserFavoriteStaffQuery.graphql  GetUserFavoriteStudioQuery.graphql  ToggleFavoriteMutation.graphql
src/api/home/: GetAiringScheduleQuery.graphql  GetHomeScreenQuery.graphql  GetNewMoreQuery.graphql  GetPopularMoreQuery.graphql  GetReleasingMoreQuery.graphql  GetSeasonMoreQuery.graphql  GetTrendingMoreQuery.graphql
src/api/media/: DeleteMediaListMutation.graphql  GetMediaCharactersQuery.graphql  GetMediaDetailsQuery.graphql  GetMediaListCollectionQuery.graphql  GetMediaRecomRelatQuery.graphql  GetMediaStaffQuery.graphql  GetMediaStatsQuery.graphql  SaveMediaListMutation.graphql  SearchAnimeQuery.graphql  SearchMangaQuery.graphql
src/api/old_queries/: ActivityUpdateMutation.graphql  ActivityUpdateReplyMutation.graphql  DeleteActivityMutation.graphql  DeleteActivityReplyMutation.graphql
src/api/profile/: FollowerListQuery.graphql  FollowingListQuery.graphql  ToggleFollowMutation.graphql
src/api/review/: GetReviewDetailsQuery.graphql  GetReviewsQuery.graphql  RateReviewMutation.graphql
src/api/staff/: GetStaffCharactersQuery.graphql  GetStaffDetailsQuery.graphql  GetStaffMediaQuery.graphql  SearchStaffQuery.graphql
src/api/studio/: GetStudioInfoQuery.graphql  SearchStudioQuery.graphql
src/api/thread/: DeleteThreadCommentMutation.graphql  DeleteThreadMutation.graphql  DeleteThreadQuery.graphql  GetCommentsOfThreadQuery.graphql  GetThreadCommentsQuery.graphql  GetThreadQuery.graphql  ToggleThreadSubcriptionMutation.graphql  UpdateThreadMutation.graphql
src/api/user/: CreateCustomListMutation.graphql  DeleteCustomListMutation.graphql  GetUnreadNotificationsQuery.graphql  GetUserNotificationsQuery.graphql  GetUserOptionsQuery.graphql  GetUserProfileQuery.graphql  GetUserStatsQuery.graphql  SearchUserQuery.graphql
src/api/user/stats/: GetAnimeOverviewQuery.graphql  GetMangaOverviewQuery.graphql  GetStaffAnimeQuery.graphql  GetStaffMangaQuery.graphql  GetStudiosQuery.graphql  GetVoiceActorsAnimeQuery.graphql
src/api/viewer/: GetViewerQuery.graphql
src/core/: AniListEnums.cpp  AuthServer.cpp  Authenticator.cpp  AuthenticatorPinFallback.cpp  Collapsable.cpp  MenuRClickFilter.cpp  SecretStorage.cpp
src/ui/: Collapsable.cpp  CustomPixmap.cpp  MainWindow.cpp  TabBar.cpp  TabBarSimple.cpp  TabButton.cpp  TabButtonSimple.cpp  VerticalTabBar.cpp
src/ui/designer/: AbstractDesignerItem.cpp  Designer.cpp  DesignerCanvas.cpp  DesignerDragableLabel.cpp  DesignerItemFactory.cpp  DesignerItemWrapper.cpp  DesignerPropertyEditor.cpp  DesignerView.cpp  DesignerWidgetListItem.cpp  DesignerWidgetsList.cpp  DesignerWidgetsListSection.cpp
src/ui/designer/item/: DesigerTextItem.cpp  DesignerDateTextItem.cpp  DesignerIconItem.cpp  DesignerImageItem.cpp  DesignerScrollableItem.cpp  DesignerTextItem.cpp  DesignerWrapperItem.cpp
src/utils/: AppPaths.cpp
tests/: CMakeLists.txt  TestSecret.cpp  TestSection.cpp
ui/: button.py  card.py  gui.py  tab.py
ui/apis/: animechangui.py  aniworldgui.py  hianimezgui.py  nekos_images.py  trace_moe_searchV2.py  waifu_images.py
ui/custom/: button.py  card.py  outlineslabel.py  search_bar.py  tab.py  vertical_tab.py  vertical_tab_button.py
utils/: __init__.py  anilex_helper.py  anilex_helpers_v2.py  helpers.py
(+30 files in other folders)
